Use tags in OAS
