# src/main/resources/swagger/api.yml
@@ -2,17 +2,17 @@ openapi: 3.0.0
 info:
   description: kafka-lag-stats API documentation
   version: 1.0.0
-  title: kafka_lag_stats API
+  title: kafka_lag_stats
 tags:
-  - name: kafka-lag-controller
+  - name: kafka-lag-stats
     description: Kafka Lag Controller
 paths:
   /api/kafka-lag/lags:
     get:
       tags:
-        - kafka-lag-controller
+        - kafka-lag-stats
       summary: getLags
-      operationId: getLagsUsingGET
+      operationId: getLags
       parameters:
         - name: group
           in: query
@@ -58,9 +58,9 @@ paths:
   /api/kafka-lag/messages-remaining:
     get:
       tags:
-        - kafka-lag-controller
+        - kafka-lag-stats
       summary: getMessagesToPublishTimestamp
-      operationId: getMessagesToPublishTimestampUsingGET
+      operationId: getMessagesToPublishTimestamp
       parameters:
         - name: group
           in: query
@@ -110,9 +110,9 @@ paths:
   /api/kafka-lag/partition:
     get:
       tags:
-        - kafka-lag-controller
+        - kafka-lag-stats
       summary: getPartition
-      operationId: getPartitionUsingGET
+      operationId: getPartition
       parameters:
         - name: key
           in: query
@@ -144,9 +144,9 @@ paths:
   /api/kafka-lag/speed-stats:
     get:
       tags:
-        - kafka-lag-controller
+        - kafka-lag-stats
       summary: getSpeedStats
-      operationId: getSpeedStatsUsingGET
+      operationId: getSpeedStats
       parameters:
         - name: group
           in: query
@@ -190,9 +190,9 @@ paths:
   /api/kafka-lag/speeds:
     get:
       tags:
-        - kafka-lag-controller
+        - kafka-lag-stats
       summary: getSpeeds
-      operationId: getSpeedsUsingGET
+      operationId: getSpeeds
       parameters:
         - name: group
           in: query
@@ -238,9 +238,9 @@ paths:
   /api/kafka-lag/time-remaining:
     get:
       tags:
-        - kafka-lag-controller
+        - kafka-lag-stats
       summary: getTimeRemaining
-      operationId: getTimeRemainingUsingGET
+      operationId: getTimeRemaining
       parameters:
         - name: group
           in: query
@@ -290,9 +290,9 @@ paths:
   /api/kafka-lag/time-remaining-stats:
     get:
       tags:
-        - kafka-lag-controller
+        - kafka-lag-stats
       summary: getTimeRemainingStats
-      operationId: getTimeRemainingStatsUsingGET
+      operationId: getTimeRemainingStats
       parameters:
         - name: group
           in: query
